[package]
name = "easylink"
version = "0.0.0"
description = "A Tauri App"
authors = [ "you" ]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
tauri-plugin-shell = "2.0.0-beta"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
easytier = "1"
tokio = { version = "1", features = [ "full" ] }
anyhow = "1.0"
chrono = { version = "0.4", features = [ "serde" ] }
dashmap = "5.5"
once_cell = "1.19"
