[package]
name = "easylink"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
tauri-plugin-shell = "2.0.0-beta"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
easytier = { git = "https://github.com/EasyTier/EasyTier", rev = "0ead308" }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
dashmap = "5.5"
once_cell = "1.19"
tracing = "0.1"
tracing-subscriber = "0.3"
md5 = "0.7"
tauri-plugin-os = "2.0.0-beta.4"

[target.'cfg(not(windows))'.dependencies]
privilege = "0.3"
