[package]
name = "easylink"
version = "0.1.0-beta"
description = "Easy to link"
authors = ["m1m1sha"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta.20", features = [ "tray-icon", "image-png", "image-ico"] }
tauri-plugin-shell = "2.0.0-beta"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
easytier = { git = "https://github.com/EasyTier/EasyTier", rev = "0ead308" }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
dashmap = "5.5"
once_cell = "1.19"
tracing = "0.1"
tracing-subscriber = "0.3"
md5 = "0.7"
tauri-plugin-os = "2.0.0-beta.4"
tauri-plugin-positioner = { version = "2.0.0-beta", features = ["tray-icon"] }
tauri-plugin-process = "2.0.0-beta.4"
tauri-plugin-notification = "2.0.0-beta.5"
tauri-plugin-autostart = "2.0.0-beta.5"
privilege = "0.3"
